--- a/about.qmd
+++ b/about.qmd
@@ -10,7 +10,7 @@ about:
     - icon: github
       text: Github
       href: https://github.com/katherinehiggs
-    - text: '![](bluesky-icon.png){height=1em} Bluesky'
+    - text: '![](bluesky-white.png){height=1em} Bluesky'
       href: https://bsky.app/profile/katherinehiggs.com
 ---
 
