--- a/posts/Matrices Worksheets/index.qmd
+++ b/posts/Matrices Worksheets/index.qmd
@@ -4,15 +4,19 @@ date: "04/27/2025"
 categories:
   - further maths worksheets
   - matrices
+description: "A worksheet and solution on adding and subtracting matrices."
+image: "images/Screenshot 2025-04-27 at 21.04.59.png"
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
+knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 ```
 
 # Introduction
 
 During the COVID-19 pandemic I created some worksheets based on A Level Maths and Further Maths. I've decided to upload these to my blog in case they can be of use.
+
+The thumbnail used is from
 
 # Matrix Arithmetic
 
@@ -117,9 +121,7 @@ c.  $$
 
 # Solutions
 
-1.  
-
-    ![](images/Screenshot%202025-04-27%20at%2020.41.34.png)
+1.  ![](images/Screenshot%202025-04-27%20at%2020.41.34.png)
 
     ------------------------------------------------------------------------
 
