--- a/posts/Matrices1.2/index.qmd
+++ b/posts/Matrices1.2/index.qmd
@@ -1,11 +1,11 @@
 ---
 title: "Matrices Worksheets 1.2: Matrix Multiplication"
-date: "04/27/2025"
+date: "04/28/2025"
 categories:
   - further maths worksheets
   - matrices
 description: "A worksheet and solution on multiplying matrices."
-image: "images/Screenshot 2025-04-27 at 21.04.59.png"
+image: "images/Screenshot 2025-04-27 at 22.03.38.png"
 ---
 
 ```{r setup, include=FALSE}
@@ -158,14 +158,16 @@ $$
 
 # Solutions
 
-1.  ![](images/Screenshot 2025-04-27 at 21.53.32.png)![](images/Screenshot 2025-04-27 at 21.54.22.png)![](images/Screenshot 2025-04-27 at 21.55.24.png)
-    ------------------------------------------------------------------------
-2.  ![](images/Screenshot 2025-04-27 at 21.56.32.png)![](images/Screenshot 2025-04-27 at 21.57.21.png)![](images/Screenshot 2025-04-27 at 21.57.56.png)
+1.  
+
+    ## ![](images/Screenshot%202025-04-27%20at%2021.53.32.png)![](images/Screenshot%202025-04-27%20at%2021.54.22.png)![](images/Screenshot%202025-04-27%20at%2021.55.24.png)
+
+2.  ![](images/Screenshot%202025-04-27%20at%2021.56.32.png)![](images/Screenshot%202025-04-27%20at%2021.57.21.png)![](images/Screenshot%202025-04-27%20at%2021.57.56.png)
 
     ------------------------------------------------------------------------
 
-3.  ![](images/Screenshot 2025-04-27 at 21.58.36.png)
+3.  ![](images/Screenshot%202025-04-27%20at%2021.58.36.png)
 
-    ![](images/Screenshot 2025-04-27 at 21.59.21.png)
+    ![](images/Screenshot%202025-04-27%20at%2021.59.21.png)
 
-    ![](images/Screenshot 2025-04-27 at 22.00.17.png)
+    ![](images/Screenshot%202025-04-27%20at%2022.00.17.png)
